--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saisandeepvaddi/eslint-config-typescript",
-  "version": "1.0.4",
+  "version": "1.0.5-0",
   "main": "index.js",
   "author": "Sai Sandeep Vaddi",
   "license": "MIT",
