--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "prettier": "^2.2.1"
   },
   "devDependencies": {
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-node": "^11.1.0"
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
